--- a/Example3_Websocket/app.config
+++ b/Example3_Websocket/app.config
@@ -2,13 +2,13 @@
 <configuration>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup>
   <appSettings>
-    <add key="endpoint" value="https://shoonyatrade.finvasia.com/NorenWClientTP/" />
-    <add key="wsendpoint" value="wss://shoonyatrade.finvasia.com/NorenWSTP/" />
-    <add key="uid" value="user" />
-    <add key="pwd" value="password" />
-    <add key="factor2" value="pan_or_dob" />
-    <add key="vc" value="vendor_code" />    
-    <add key="appkey" value="secret_key" />  
+    <add key="endpoint" value="https://api.shoonya.com/NorenWClientTP/" />
+    <add key="wsendpoint" value="wss://api.shoonya.com/NorenWSTP/" />
+    <add key="uid" value="" />
+    <add key="pwd" value="@1" />
+    <add key="factor2" value="" />
+    <add key="vc" value="" />    
+    <add key="appkey" value="" />  
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
